{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 248,
  "lineage": "ee44292f-3e5d-9031-e584-5ffbe22d6f48",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4f7023847b90238",
            "arn": "arn:aws:ec2:us-east-1:875005925642:instance/i-00f5629fd1ebb2284",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f5629fd1ebb2284",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a6c176923444fa81",
            "private_dns": "ip-10-0-1-95.ec2.internal",
            "private_ip": "10.0.1.95",
            "public_dns": "ec2-44-211-54-210.compute-1.amazonaws.com",
            "public_ip": "44.211.54.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:875005925642:key/3f3f39cd-13b3-4754-8aba-e8d62606766a",
                "throughput": 0,
                "volume_id": "vol-0251dbb872b87c159",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0efdd4cc0579bc0bb",
            "tags": {
              "Name": "Kubernetes controller"
            },
            "tags_all": {
              "Name": "Kubernetes controller"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0451656e9b924baf2",
              "sg-05976490ee89aa1ab",
              "sg-082f64ccc019f0e0e"
            ]
          },
          "dependencies": [
            "aws_security_group.kube-cluster",
            "aws_security_group.kube-control-ssh-sg",
            "aws_security_group.kube-outbound",
            "aws_subnet.kube-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-worker-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4f7023847b90238",
            "arn": "arn:aws:ec2:us-east-1:875005925642:instance/i-00c147583baaa77e8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c147583baaa77e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f435004e49f7c6a4",
            "private_dns": "ip-10-0-1-155.ec2.internal",
            "private_ip": "10.0.1.155",
            "public_dns": "ec2-3-237-201-163.compute-1.amazonaws.com",
            "public_ip": "3.237.201.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:875005925642:key/3f3f39cd-13b3-4754-8aba-e8d62606766a",
                "throughput": 0,
                "volume_id": "vol-0b32465157d94197f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0efdd4cc0579bc0bb",
            "tags": {
              "Name": "Kubernetes worker 1"
            },
            "tags_all": {
              "Name": "Kubernetes worker 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05976490ee89aa1ab",
              "sg-082f64ccc019f0e0e"
            ]
          },
          "dependencies": [
            "aws_security_group.kube-control-ssh-sg",
            "aws_security_group.kube-outbound",
            "aws_subnet.kube-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-worker-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4f7023847b90238",
            "arn": "arn:aws:ec2:us-east-1:875005925642:instance/i-042e8b8af5363113f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-042e8b8af5363113f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d618f002bdddea3c",
            "private_dns": "ip-10-0-1-210.ec2.internal",
            "private_ip": "10.0.1.210",
            "public_dns": "ec2-44-197-229-4.compute-1.amazonaws.com",
            "public_ip": "44.197.229.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:875005925642:key/3f3f39cd-13b3-4754-8aba-e8d62606766a",
                "throughput": 0,
                "volume_id": "vol-0a44faeace9f1de92",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0efdd4cc0579bc0bb",
            "tags": {
              "Name": "Kubernetes worker 2"
            },
            "tags_all": {
              "Name": "Kubernetes worker 2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05976490ee89aa1ab",
              "sg-082f64ccc019f0e0e"
            ]
          },
          "dependencies": [
            "aws_instance.k8s-worker-1",
            "aws_security_group.kube-control-ssh-sg",
            "aws_security_group.kube-outbound",
            "aws_subnet.kube-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kube-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875005925642:internet-gateway/igw-0e4340e260f64155b",
            "id": "igw-0e4340e260f64155b",
            "owner_id": "875005925642",
            "tags": {
              "Name": "Kubernetes internet gateway"
            },
            "tags_all": {
              "Name": "Kubernetes internet gateway"
            },
            "vpc_id": "vpc-06c39fd0351b97498"
          },
          "dependencies": [
            "aws_vpc.kube-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "external-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875005925642:route-table/rtb-0d2bf5be760de295d",
            "id": "rtb-0d2bf5be760de295d",
            "owner_id": "875005925642",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4340e260f64155b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "External IP routing"
            },
            "tags_all": {
              "Name": "External IP routing"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c39fd0351b97498"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kube-igw",
            "aws_vpc.kube-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f362758ca013b52",
            "route_table_id": "rtb-0d2bf5be760de295d",
            "subnet_id": "subnet-0efdd4cc0579bc0bb"
          },
          "dependencies": [
            "aws_internet_gateway.kube-igw",
            "aws_route_table.external-rt",
            "aws_subnet.kube-public-subnet",
            "aws_vpc.kube-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kube-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875005925642:security-group/sg-0451656e9b924baf2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0451656e9b924baf2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "Kube Cluster connection",
            "name_prefix": "",
            "owner_id": "875005925642",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow nodes to join the cluster"
            },
            "tags_all": {
              "Name": "allow nodes to join the cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c39fd0351b97498"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kube-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kube-control-ssh-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875005925642:security-group/sg-082f64ccc019f0e0e",
            "description": "SHH access to Kube controller",
            "egress": [],
            "id": "sg-082f64ccc019f0e0e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Kube SSH",
            "name_prefix": "",
            "owner_id": "875005925642",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Kubernetes SSH security group"
            },
            "tags_all": {
              "Name": "Kubernetes SSH security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c39fd0351b97498"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kube-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kube-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875005925642:security-group/sg-05976490ee89aa1ab",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05976490ee89aa1ab",
            "ingress": [],
            "name": "Kube Outbound sg",
            "name_prefix": "",
            "owner_id": "875005925642",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow outbound connections"
            },
            "tags_all": {
              "Name": "allow outbound connections"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c39fd0351b97498"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kube-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kube-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875005925642:subnet/subnet-0efdd4cc0579bc0bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efdd4cc0579bc0bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "875005925642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Kubernetes public subnet"
            },
            "tags_all": {
              "Name": "Kubernetes public subnet"
            },
            "vpc_id": "vpc-06c39fd0351b97498"
          },
          "dependencies": [
            "aws_vpc.kube-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kube-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875005925642:vpc/vpc-06c39fd0351b97498",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-033bc4109cc069891",
            "default_route_table_id": "rtb-050ae88e2ed08721a",
            "default_security_group_id": "sg-09e589df7ac4f0d79",
            "dhcp_options_id": "dopt-04da2b866d4e77c9b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06c39fd0351b97498",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-050ae88e2ed08721a",
            "owner_id": "875005925642",
            "tags": {
              "Name": "Kubernetes VPC"
            },
            "tags_all": {
              "Name": "Kubernetes VPC"
            }
          }
        }
      ]
    }
  ]
}